multi: add fiat backend option to RPC endpoints
This commit adds a fiat_backends option to the RPC relevant RPC
endpoints. Namely, the NodeAudit and ExchangeRate endpoint.
